# traverse

./: .gitmodules  Cargo.toml  DESIGN.md  Dockerfile  README.md  build-docker-images.sh  docker-compose.yml
.github/workflows/: publish-crates.yml  release-guard.yml  release.yml  test.yml  update-homebrew.yml
HomebrewFormula/: traverse.rb
crates/backend/: Cargo.toml
crates/backend/src/: compiler.rs  ddlog_drain.rs  ddlog_gen.rs  ddlog_lang.rs  ddlog_rt.rs  facts.rs  gen_ddlog.rs  hydrate.rs  lib.rs
crates/cli/: Cargo.toml  README.md
crates/codegen/: Cargo.toml  README.md
crates/codegen/examples/: invariant_breaker_demo.rs
crates/codegen/src/: access_control_stub.rs  deployer_stub.rs  invariant_breaker.rs  lib.rs  revert_stub.rs  state_change_stub.rs  teststubs.rs
crates/codegen/templates/: deployer.sol.tera  event_test.sol.tera  revert_test.sol.tera  state_change_test.sol.tera
crates/compiler/: Cargo.toml
crates/compiler/src/: compile.rs
crates/core/: Cargo.toml
crates/core/src/: backend.rs  codegen.rs  ddlog.rs  facts.rs  hig.rs  hig_dot.rs  lib.rs  scaffold.rs
crates/dsl/: Cargo.toml  grammar.pest  ir.pest
crates/dsl/src/: ast.rs  compiler.rs  ddlog_gen.rs  ddlog_lang.rs  ir.rs  lib.rs  node_types.rs  parser.rs
crates/frontend/: Cargo.toml  dsl.pest  grammar.pest
crates/frontend/src/: ast.rs  compiler.rs  dsl.rs  error.rs  formatter.rs  gen_ir.rs  lib.rs  parser.rs  syntax.rs
crates/graph/: Cargo.toml  README.md
crates/graph/src/: builtin.rs  cg.rs  cg_dot.rs  cg_json.rs  cg_json_tests.rs  cg_mermaid.rs  chains.rs  interface_resolver.rs  lib.rs  manifest.rs  parser.rs  reachability.rs  storage_access.rs  tests.rs
crates/graph/src/natspec/: extract.rs  mod.rs
crates/graph/src/steps/: channel.rs  entity.rs  mod.rs
crates/ir/: Cargo.toml  ir.pest
crates/ir/src/: formatter.rs  lib.rs  syntax.rs
crates/language/: Cargo.toml  build.rs
crates/language/src/: lib.rs  node_types.rs
crates/logging/: Cargo.toml  README.md
crates/logging/src/: lib.rs
crates/mermaid/: Cargo.toml  README.md
crates/mermaid/src/: lib.rs  mermaid_chunker.rs  sequence_diagram.pest  sequence_diagram.rs  sequence_diagram_ast.rs  sequence_diagram_builder.rs  sequence_diagram_parser.rs  sequence_diagram_tests.rs  sequence_diagram_writer.rs
crates/sol2seq/: Cargo.toml  build.rs  sol2seq.trv
crates/sol2seq/.cargo/: config.toml
crates/sol2seq/src/: lib.rs
crates/sol2seq/tests/: acceptance.rs
crates/sol2seq/tests/common/: mod.rs
crates/sol2seq/tests/fixtures/: counter.md  counter.sol  invocation.sol  simple.sol
crates/solidity/: Cargo.toml  README.md  solidity.pest
crates/solidity/src/: ast.rs  builder.rs  interpreter.rs  lib.rs  parser.rs  solidity_writer.rs  tests.rs
crates/traverse-cli/: Cargo.toml  mvp_v3.dsl
crates/traverse-cli/examples/greeter/: CallerContract.sol  IGreeter.sol  README.md
crates/traverse-cli/src/: hydrate.rs
crates/tree-sitter-traverse/: Cargo.toml  grammar.js  sample-file.dsl  tree-sitter.json
crates/tree-sitter-traverse/bindings/rust/: build.rs  lib.rs
crates/tree-sitter-traverse/queries/: highlights.scm
crates/tree-sitter-traverse/src/: grammar.json  node-types.json  parser.c
demos/simple_testgen/my-foundry-tests/src/: DemoContract.sol
demos/simple_testgen/my-foundry-tests/test/: DemoContractDeactivateAccessControlTest.t.sol  DemoContractDeactivateRevertTest.t.sol  DemoContractDeactivateStateTest.t.sol  DemoContractDeployerTest.t.sol  DemoContractSetValueAccessControlTest.t.sol  DemoContractSetValueEnhancedRevertTest.t.sol  DemoContractSetValueRevertTest.t.sol  DemoContractSetValueStateTest.t.sol  DemoContractSumParametersEnhancedRevertTest.t.sol  DemoContractSumParametersRevertTest.t.sol  DemoContractUpdateMessageRevertTest.t.sol  DemoContractUpdateMessageStateTest.t.sol  DemoContractdeactivateAccessTest0.t.sol  DemoContractdeactivateStateTest0.t.sol  DemoContractsetValueAccessTest0.t.sol  DemoContractsetValueRevertTest0.t.sol  DemoContractsetValueStateTest0.t.sol  DemoContractsumParametersRevertTest0.t.sol  DemoContractupdateMessageStateTest0.t.sol  Deployer_DemoContract.t.sol
examples/: UniswapV2ERC20.facts  UniswapV2ERC20.raw  config.yaml  mvp_v3.dsl
examples/UniswapV2-annotated/: UniswapV2ERC20.sol
examples/UniswapV2-annotated/interfaces/: IERC20.sol
examples/greeter/: ChainedConstructorCaller.sol  ConcretePair.sol  FormalGreeter.sol  FriendlyGreeter.sol  IGreeter.sol  ITokenPair.sol  IValueHolder.sol  PairCaller.sol  ValueHolder.sol
examples/smart-invoice/: README.md  smart-invoice.pre-hydration
examples/smart-invoice/analysis/: statistics.json
examples/smart-invoice/output/: full-project.dot
examples/smart-invoice/output/mermaid-chunks/: chunk_001.mmd  chunk_002.mmd  chunk_003.mmd  chunk_004.mmd  chunk_005.mmd  chunk_006.mmd  chunk_007.mmd  index.mmd  metadata.json
rfc/bdd/: README.md
rfc/testing/: MyTokenTransfer.feature  MyTokenTransfer.t.sol  README.md  SimpleERC20.md  SimpleERC20.sol  example-usage.json  gherkin-extended-schema.json
ri/: README.md
ri/solidity_ddlog/: Cargo.toml  solidity.dot
ri/solidity_ddlog/src/: build.rs  lib.rs  main.rs
ri/solidity_ddlog/types/: Cargo.toml  solidity.rs
ri/solidity_ddlog/types/ddlog_bigint/: Cargo.toml  ddlog_bigint.rs
ri/solidity_ddlog/types/ddlog_log/: Cargo.toml  ddlog_log.rs
ri/solidity_ddlog/types/ddlog_rt/: Cargo.toml  ddlog_rt.rs
ri/solidity_ddlog/types/ddlog_std/: Cargo.toml  ddlog_std.rs
ri/solidity_ddlog/types/debug/: Cargo.toml  debug.rs
ri/solidity_ddlog/types/internment/: Cargo.toml  internment.rs
ri/specs/: solidity.dl
scripts/: publish-crates.sh
test/: SimpleContract.sol
