[package]
name = "cli"
version = "0.1.0"
edition = "2021"
resolver = "2"

[[bin]]
name = "sol-storage-analyzer"
path = "src/bin/sol-storage-analyzer.rs"

[[bin]]
name = "storage-trace"
path = "src/bin/storage-trace.rs"

[[bin]]
name = "sol2cg"
path = "src/bin/sol2cg.rs"

[[bin]]
name = "sol2bnd"
path = "src/bin/sol2bnd.rs"

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
language = { path = "../language" }
mermaid = { path = "../mermaid" }
graph = { path = "../graph" }
proc-macro2 = "1.0.92"
quote = "1.0.37"
syn = { version = "2.0.90", features = ["full"] }
tree-sitter = "0.24.0"
clap = { version = "4.5.23", features = ["derive"] }
tempfile = "3.14.0"
which = "7.0.1"
bytes = "1.9.0"
tempdir = "0.3.7"
reedline = "0.38.0"
regex = "1.11.1"
anyhow = "1.0" # For easy error handling
walkdir = "2"   # For directory traversal
thiserror = "1.0" # For custom error types
serde_yaml = "0.9.34"
