[package]
name = "traverse-cli"
version = "0.1.2"
edition = "2021"
resolver = "2"
authors = ["Traverse Contributors"]
license = "MIT OR Apache-2.0"
description = "Command-line tools for Solidity code analysis, visualization, and test generation"
repository = "https://github.com/calltrace/traverse"
homepage = "https://github.com/calltrace/traverse"
documentation = "https://github.com/calltrace/traverse#readme"
keywords = ["solidity", "ethereum", "analysis", "testing", "cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "sol-storage-analyzer"
path = "src/bin/sol-storage-analyzer.rs"

[[bin]]
name = "storage-trace"
path = "src/bin/storage-trace.rs"

[[bin]]
name = "sol2cg"
path = "src/bin/sol2cg.rs"

[[bin]]
name = "sol2bnd"
path = "src/bin/sol2bnd.rs"

[[bin]]
name = "sol2test"
path = "src/bin/sol2test.rs"

[dependencies]
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
traverse-logging = { version = "0.1.2", path = "../logging" }
traverse-mermaid = { version = "0.1.2", path = "../mermaid" }
traverse-graph = { version = "0.1.2", path = "../graph" }
traverse-codegen = { version = "0.1.2", path = "../codegen" }
proc-macro2 = "1.0.92"
quote = "1.0.37"
syn = { version = "2.0.90", features = ["full"] }
tree-sitter = "0.25"
clap = { version = "4.5.23", features = ["derive"] }
tempfile = "3.14.0"
which = "7.0.1"
bytes = "1.9.0"
reedline = "0.38.0"
regex = "1.11.1"
anyhow = "1.0" # For easy error handling
walkdir = "2"   # For directory traversal
thiserror = "1.0" # For custom error types
serde_yaml = "0.9.34"
tera = "1.20.0"
chrono = "0.4.41"
serde_derive = "1.0.219"
serde_json = "1.0.140"
serde = "1.0.219"
toml = "0.8"
