[package]
name = "traverse-codegen"
version = "0.1.4"
edition = "2021"
resolver = "2"
authors = ["Traverse Contributors"]
license = "MIT OR Apache-2.0"
description = "Code generation utilities for Solidity test generation and analysis"
repository = "https://github.com/calltrace/traverse"
homepage = "https://github.com/calltrace/traverse"
documentation = "https://docs.rs/traverse-codegen"
readme = "README.md"
keywords = ["solidity", "codegen", "testing", "ethereum"]
categories = ["development-tools"]

[dependencies]
traverse-graph = { version = "0.1.4", path = "../graph" }
tracing = { workspace = true }
anyhow = "1.0.97"
clap = "4.5.35"
serde_json = "1.0.140"
streaming-iterator = "0.1.9"
tree-sitter = "0.25"
thiserror = "2.0.12"
once_cell = "1.21.3"
nom = { version = "8.0.0", features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
walkdir = "2" 
tempfile = "3.20.0"
semver = "1.0.26"
traverse-solidity = { version = "0.1.4", path = "../solidity" }
tokio = { version = "1.0", features = ["full"] }
rand = "0.8"
hex = "0.4"
getrandom = { version = "0.2", features = ["js"] }
[build-dependencies]
cc = "1.0"



