[package]
name = "core"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
ir = { path = "../ir" }
language = { path = "../language" }
proc-macro2 = "1.0.92"
quote = "1.0.37"
syn = { version = "2.0.90", features = ["full"] }
tree-sitter = "0.24.0"
clap = { version = "4.5.23", features = ["derive"] }
tempfile = "3.14.0"
which = "7.0.1"
bytes = "1.9.0"
tempdir = "0.3.7"
reedline = "0.38.0"

[build-dependencies]
cc = "1.0"

