[package]
name = "frontend"
version = "0.1.0"
edition = "2021"

[dependencies]
ir = { path = "../ir" }
clap = { version = "4.5.23", features = ["derive"] }
from-pest = "0.3.2"
indexmap = { version= "2.7.0", features = ["serde"] }
lazy_static = "1.5.0"
log = "0.4.22"
pest = "2.7.15"
pest-ast = "0.3.4"
pest_derive = "2.7.15"
pretty_env_logger = "0.5.0"
rustyline = "15.0.0"
serde = "1.0.216"
serde_derive = "1.0.216"
serde_json = "1.0.133"
reedline = "0.38.0"

[dev-dependencies]
ctor = "0.1.26"

[build-dependencies]
cc = "1.2.4"
