[package]
name = "graph"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
mermaid = { path = "../mermaid" }
anyhow = "1.0.97"
clap = "4.5.35"
language = { path = "../language" }
petgraph = "0.8.1"
serde_json = "1.0.140"
streaming-iterator = "0.1.9"
tree-sitter = "0.24.0"
tree-sitter-graph = "0.12.0"

[build-dependencies]
cc = "1.0"
