[package]
name = "graph"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
mermaid = { path = "../mermaid" }
anyhow = "1.0.97"
clap = "4.5.35"
language = { path = "../language" }
petgraph = "0.8.1"
serde_json = "1.0.140"
streaming-iterator = "0.1.9"
tree-sitter = "0.24.0"
tree-sitter-graph = "0.12.0"
thiserror = "2.0.12"
once_cell = "1.21.3"
nom = { version = "8.0.0", features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
walkdir = "2" # For directory traversal in manifest generation
tempfile = "3.20.0"

[build-dependencies]
cc = "1.0"
