[package]
name = "traverse-graph"
version = "0.1.2"
edition = "2021"
resolver = "2"
authors = ["Traverse Contributors"]
license = "MIT OR Apache-2.0"
description = "Call graph analysis and visualization for Solidity smart contracts"
repository = "https://github.com/calltrace/traverse"
homepage = "https://github.com/calltrace/traverse"
documentation = "https://docs.rs/traverse-graph"
readme = "README.md"
keywords = ["solidity", "call-graph", "ethereum", "analysis"]
categories = ["development-tools", "visualization"]

[dependencies]
traverse-mermaid = { version = "0.1.2", path = "../mermaid" }
tracing = { workspace = true }
anyhow = "1.0.97"
clap = "4.5.35"
petgraph = "0.8.1"
serde_json = "1.0.140"
streaming-iterator = "0.1.9"
tree-sitter = "0.25"
tree-sitter-solidity = { package = "tree-sitter-solidity-traverse", version = "1.2.13-4e938a4" }
thiserror = "2.0.12"
once_cell = "1.21.3"
nom = { version = "8.0.0", features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
walkdir = "2" # For directory traversal in manifest generation
tempfile = "3.20.0"

[build-dependencies]
cc = "1.0"
