[package]
name = "language"
version = "0.1.0"
edition = "2021"
resolver = "2"

# Default library target
[lib]
name = "language"
path = "src/lib.rs"

# Binary targets
[[bin]]
name = "ts_parse"  # Name of the binary (executable)
path = "src/bin/main.rs"

[dependencies]
tracing = { workspace = true }
indexmap = { version= "2.7.0", features = ["serde"] }
proc-macro2 = "1.0.92"
quote = "1.0.37"
serde = "1.0.217"
serde_derive = "1.0.217"
serde_json = "1.0.137"
syn = { version = "2.0.90", features = ["full"] }
tree-sitter = "0.24.5"

#include cc compiler 
[build-dependencies]
cc = "1.0"

