[package]
name = "traverse-mermaid"
version = "0.1.2"
edition = "2021"
resolver = "2"
authors = ["Traverse Contributors"]
license = "MIT OR Apache-2.0"
description = "Mermaid diagram generation for Solidity code visualization"
repository = "https://github.com/calltrace/traverse"
homepage = "https://github.com/calltrace/traverse"
documentation = "https://docs.rs/traverse-mermaid"
keywords = ["mermaid", "visualization", "diagram", "solidity"]
categories = ["development-tools", "visualization"]

[lib]
path = "src/lib.rs"

[dependencies]
tracing = { workspace = true }
pest = "2.7"
pest_derive = "2.7"
