[package]
name = "sol2seq"
version = "0.1.0"
edition = "2021"
resolver = "2"

[[bin]]
name = "cargo-cleanall"
path = "src/bin/cargo-cleanall.rs"

# compile source on ./tests folder 
[lib]

# Add build script to handle cleaning
build = "build.rs"

[dev-dependencies]
ctor = "0.4"

[dependencies]
language = { path = "../language" }
compiler = { path = "../compiler" }
backend = { path = "../backend" }
mermaid = { path = "../mermaid" }
