[package]
name = "traverse-solidity"
version = "0.1.3"
edition = "2021"
resolver = "2"
authors = ["Traverse Contributors"]
license = "MIT OR Apache-2.0"
description = "Solidity language parser and AST for code analysis"
repository = "https://github.com/calltrace/traverse"
homepage = "https://github.com/calltrace/traverse"
documentation = "https://docs.rs/traverse-solidity"
readme = "README.md"
keywords = ["solidity", "ethereum", "parser", "ast"]
categories = ["development-tools", "parser-implementations"]

[lib]
name = "traverse_solidity"
path = "src/lib.rs"

[dependencies]
tracing = { workspace = true }
pest = "2.7"
pest_derive = "2.7"
hex = "0.4"
