[package]
name = "traverse-cli"
version = "0.1.0"
edition = "2021"
resolver = "2"

[[bin]]
name = "ts-to-ddlog"
path = "src/bin/ts-to-ddlog.rs"

[[bin]]
name = "repl"
path = "src/bin/repl.rs"

[[bin]]
name = "ts-grammar-to-ddlog"
path = "src/bin/ts-grammar-to-ddlog.rs"

[[bin]]
name = "trvc"
path = "src/bin/trvc.rs"

[[bin]]
name = "trvf"
path = "src/bin/trvf.rs"


[[bin]]
name = "ftd"
path = "src/bin/ftd.rs"

[dependencies]
tracing = "0.1"
tracing-subscriber = "0.3"
core = { path = "../core" }
frontend = { path = "../frontend" }
backend = { path = "../backend" }
ir = { path = "../ir" }
language = { path = "../language" }
compiler = { path = "../compiler" }
proc-macro2 = "1.0.92"
quote = "1.0.37"
syn = { version = "2.0.90", features = ["full"] }
tree-sitter = "0.24.0"
clap = { version = "4.5.23", features = ["derive"] }
tempfile = "3.14.0"
which = "7.0.1"
bytes = "1.9.0"
tempdir = "0.3.7"
reedline = "0.38.0"
regex = "1.11.1"
