[package]
name = "tree-sitter-traverse"
description = "Traverse grammar for the tree-sitter parsing library"
version = "0.1.0"
repository = "https://github.com/velvet-global/traverse"
edition = "2021"
readme = "README.md"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "^0.24.7"

[build-dependencies]
cc = "1.0"
